apps/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: demo
spec:
  replicas: 1

  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
      - name: nginx

        image: nginx:stable

        ports:
        - containerPort: 80

        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"

          limits:
            memory: "128Mi"
            cpu: "200m"
