apps/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nginx
  namespace: demo

spec:
  ingressClassName: traefik

  rules:
  - host: nginx.lab.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: nginx

            port:
              number: 80
